--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- rquired meta for Boostrap -->
+		<!-- required meta for Boostrap -->
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -34,7 +34,7 @@
 				<div class="row my-4 fadein-order-2">
 					<div class="col-sm-12">
 						<p class="text-center h1">
-						  Welcome! My name is <span class="font-weight-bold">Taihua Li</span>.<br>
+						  Hi! My name is <span class="font-weight-bold">Taihua Li</span>.<br>
 							<span class="h4 text-muted font-weight-light">Full-Stack Data Scientist</span>
 						</p>
 					</div>
