--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- rquired meta for Boostrap -->
+		<!-- required meta for Boostrap -->
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -85,9 +85,9 @@
 						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I LOVED how economic theories and models explain real-world phenomena.
 						However, I was puzzled by how economists came up with the mathematical models, which led me to study
 						econometrics and eventually to study machine learning. What machine learning attracts me the most is
-						its ability to discover patterns in data using intuitively simple methodologies. Furthermore, I am fascinated
-						by how data science as a whole can help organizations transform and better processes, services and products,
-						which directly or indirectly benefit how we live our lives.
+						its ability to discover patterns in data using intuitively simple methodologies. I am also fascinated
+						by how data science as a whole help organizations evolve their processes, services and products,
+						which directly or indirectly impact how we live our lives.
 					</p>
 				</div>
 
