--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- rquired meta for Boostrap -->
+		<!-- required meta for Boostrap -->
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -34,11 +34,12 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="../index.html">Home</a>
 			      </li>
-						<li class="nav-item">
-							<a class="nav-link" href="./about.html">About</a>
-						</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./about.html">About</a>
+					</li>
 			      <li class="nav-item active">
 			        <a class="nav-link" href="./cv.html">Curriculum Vitae</a>
+				  </li>
 			  </div>
 			</nav>
 		</div>
