--- a/pages/cv.html
+++ b/pages/cv.html
@@ -217,7 +217,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						August 2019
+						2019
 					</p>
 				</div>
 			</div>
@@ -231,7 +231,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						February 2018
+						2018
 					</p>
 				</div>
 			</div>
@@ -244,7 +244,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						June 2017
+						2017
 					</p>
 				</div>
 			</div>
@@ -257,7 +257,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						May 2015
+						2015
 					</p>
 				</div>
 			</div>
@@ -270,7 +270,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						May 2015
+						2015
 					</p>
 				</div>
 			</div>
@@ -287,11 +287,17 @@
 
 			<ul class="text-content">
 				<li>
+					Pranati Sahu, Surya Dulla, Jin Fei, Han Man, Kareem Williams, <span style="color: red;">Taihua Li</span>, and Rohit Rangnekar. "Accelerating the deployment of PPE detection solution to comply with safety guidelines". AWS Machine Learning Blog, 2021. <a href="https://aws.amazon.com/blogs/machine-learning/accelerating-the-deployment-of-ppe-detection-solution-to-comply-with-safety-guidelines/" target="_blank">blog</a>
+				</li>
+				<li>
+					<span style="color: red;">Taihua Li</span>. "Building a customized recommender system in Amazon SageMaker." AWS Machine Learning Blog, 2020. <a href="https://aws.amazon.com/blogs/machine-learning/building-a-customized-recommender-system-in-amazon-sagemaker/" target="_blank">blog</a>
+				</li>
+				<li>
 					Samah Fodeh, <span style="color: red;">Taihua Li</span>, Kevin Menczynski, Tedd Burgette, Andrew Harris, Georgeta Ilita, Satyan Rao, Jonathan Gemmell, Daniela Raicu. "Using Machine Learning Algorithms to Detect Suicide Risk Factors on Twitter." In 2019 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 941-948. IEEE, 2019.
 					<a href="https://ieeexplore.ieee.org/abstract/document/8955490" target="_blank">pdf</a>
 				</li>
 				<li>
-					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics (2019).
+					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics, 2019.
 					<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>
 				</li>
 				<li>
@@ -299,7 +305,7 @@
 					<a href="https://ieeexplore.ieee.org/abstract/document/8637572" target="_blank">pdf</a>
 				</li>
 				<li>
-					Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences., 2017.
+					Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences, 2017.
 					<a href="https://repository.isls.org/handle/1/246" target="_blank">pdf</a>
 				</li>
 				<li>
@@ -311,7 +317,6 @@
 					<a href="https://ieeexplore.ieee.org/document/7814479" target="_blank">pdf</a>
 				</li>
 			</ul>
-
 			<!-- publication end -->
 
 		</div>
