--- a/pages/cv.html
+++ b/pages/cv.html
@@ -52,7 +52,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="subtitle font-weight-bold">
-						Work Experience
+						Experience
 					</p>
 				</div>
 			</div>
@@ -60,16 +60,32 @@
 			<div class="row">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
-						<span class="font-weight-bold">Data Scientist II</span>, Amazon Web Services (AWS), Chicago, IL
+						<span class="font-weight-bold">Senior Data Scientist (Tech Lead)</span>, Amazon Web Services (AWS), Chicago, IL
 						<ul class="text-subcontent">
 							<li>"Alexa, what does a data scientist do?"</li>
-							<li>Check out <a href="https://aws.amazon.com/machine-learning/" target="_blank">Machine Learning on AWS</a></li>
+							<li>Check out <a href="https://aws.amazon.com/machine-learning/" target="_blank">Machine Learning on AWS</a> and <a href="https://aws.amazon.com/sagemaker/mlops/" target="_blank"> Amazon SageMaker for MLOps </a></li>
 						</ul>
 					</p>
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						October 2019 - Present
+						October 2022 - Present
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-8 text-left">
+					<p class="text-content">
+						<span class="font-weight-bold">Data Scientist</span>, Amazon Web Services (AWS), Chicago, IL
+						<ul class="text-subcontent">
+							<li>"Alexa, what does a data scientist do?"</li>
+						</ul>
+					</p>
+				</div>
+				<div class="col-sm-4 text-right">
+					<p class="text-content">
+						October 2019 - October 2022
 					</p>
 				</div>
 			</div>
@@ -215,11 +231,6 @@
 						<a href="../docs/CORe.pdf" target="_blank">certificate</a>
 					</p>
 				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						2019
-					</p>
-				</div>
 			</div>
 
 			<div class="row content-item">
@@ -227,11 +238,6 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Deep Learning Specialization</span>, deeplearning.ai, Online
 						<a href="../docs/deep_learning_specialization.pdf" target="_blank">certificate</a>
-					</p>
-				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						2018
 					</p>
 				</div>
 			</div>
@@ -242,11 +248,6 @@
 						<span class="font-weight-bold">M.S. in Predictive Analytics, With Honor</span>, DePaul University, Chicago, IL
 					</p>
 				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						2017
-					</p>
-				</div>
 			</div>
 
 			<div class="row content-item">
@@ -255,22 +256,12 @@
 						<span class="font-weight-bold">B.A. in Economics, Magna Cum Laude</span>, Ripon College, Ripon, WI
 					</p>
 				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						2015
-					</p>
-				</div>
 			</div>
 
 			<div class="row content-item">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
 						<span class="font-weight-bold">B.A. in Business Management, Magna Cum Laude</span>, Ripon College, Ripon, WI
-					</p>
-				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						2015
 					</p>
 				</div>
 			</div>
@@ -286,6 +277,9 @@
 			</div>
 
 			<ul class="text-content">
+				<li>
+					Jerry Peng, Gayatri Ghanakota, <span style="color: red;">Taihua Li</span>, Dewen Qi, and Rupinder Grewal. "ew features for Amazon SageMaker Pipelines and the Amazon SageMaker SDK". AWS Machine Learning Blog, 2022. <a href="https://aws.amazon.com/blogs/machine-learning/new-features-for-amazon-sagemaker-pipelines-and-the-amazon-sagemaker-sdk/" target="_blank">blog</a>
+				</li>
 				<li>
 					Pranati Sahu, Surya Dulla, Jin Fei, Han Man, Kareem Williams, <span style="color: red;">Taihua Li</span>, and Rohit Rangnekar. "Accelerating the deployment of PPE detection solution to comply with safety guidelines". AWS Machine Learning Blog, 2021. <a href="https://aws.amazon.com/blogs/machine-learning/accelerating-the-deployment-of-ppe-detection-solution-to-comply-with-safety-guidelines/" target="_blank">blog</a>
 				</li>
@@ -324,7 +318,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center font-weight-lighter text-muted copyright-text">
-				&copy; 2022 Taihua Li
+				&copy; Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
