--- a/pages/template.html
+++ b/pages/template.html
@@ -49,7 +49,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center font-weight-lighter text-muted copyright-text">
-				&copy; 2022 Taihua Li
+				&copy; Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
