--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="col-sm-12">
 						<p class="text-center h1">
 						  Hi! My name is <span class="font-weight-bold">Taihua Li</span>.<br>
-							<span class="h4 text-muted font-weight-light">Full-Stack Data Scientist</span>
+							<span class="h4 text-muted font-weight-light">Data Scientist | AI/ML Architect | Digital Transformation | MLOps</span>
 						</p>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center fixed-bottom font-weight-lighter text-muted copyright-text">
-				&copy; 2022 Taihua Li
+				&copy; Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
