--- a/pages/about.html
+++ b/pages/about.html
@@ -54,21 +54,29 @@
 					<p class="subtitle font-weight-bold">About Me</p>
 				</div>
 			</div>
-
+			
 			<div class="row fadein-order-1">
-				<div class="col-sm-4 text-center">
+				<div class="col-sm-4 text-center my-auto">
 					<img class="img-fluid profile-picture content-picture" src="../img/me.jpg" alt="picture of me">
 				</div>
 
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a data scientist at Amazon Web Services (AWS).
-						My passion in AI/ML research mainly focuses on,
+						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a Sr. Data Scientist at Amazon Web Services (AWS)
+						Professional Services, at where I advise global enterprise organizations on AI/ML strategy and roadmap. I also lead teams of scientists
+						and engineers to develop and implement AI/ML models and platforms.
+						My top three expertise in the field are as follows,
 					<ul>
-						<li>User-centered AI</li>
-						<li>Recommender system</li>
-						<li>Multi-modal data modeling</li>
+						<li>AI/ML and digital transformation strategy using cloud</li>
+						<li>Data science model development and operationalization</li>
+						<li>Scalable machine learning operations (MLOps) architecting</li>
 					</ul>
+					  &nbsp;&nbsp;&nbsp;&nbspAt AWS, I have helped 12 customers across financial services, media and entertainment, sports, healthcare and life sciences,
+						and agriculture, through 15 projects, to develop and productionize 6+ models and architect 2+ end-to-end ML platforms with hundreds of data scientist and
+						machine learning engineer users. The models delivered span across classical machine learning, computer vision, natural langauge processing, and signal processing.
+					</p>
+					<p>
+
 					</p>
 				</div>
 			</div>
@@ -77,18 +85,18 @@
 			<!-- why data science -->
 			<div class="row fadein-order-2">
 				<div class="col-sm-12 text-left">
-					<p class="subtitle font-weight-bold">Why Data Science</p>
+					<p class="subtitle font-weight-bold">Why AI/ML and Data Science</p>
 				</div>
 			</div>
 
 			<div class="row fadein-order-2">
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I LOVED how economic theories and models explain real-world phenomena.
+						&nbsp;&nbsp;&nbsp;&nbsp;When I was in college, I LOVED how economic theories and models explain real-world phenomenon.
 						However, I was puzzled by how economists came up with the mathematical models, which led me to study
 						econometrics and eventually to study machine learning. What machine learning attracts me the most is
-						its ability to discover patterns in data using intuitively simple methodologies. I am also fascinated
-						by how data science as a whole help organizations evolve their processes, services and products,
+						its ability to discover patterns in data using intuitively simple methodologies, and sometime without SME knowledge.
+						I am also fascinated by how AI/ML help organizations evolve and innovate their processes, services and products,
 						which directly or indirectly impact how we live our lives.
 					</p>
 				</div>
@@ -129,7 +137,7 @@
 		<!-- copyright -->
 		<footer class="page-footer">
 			<div class="text-center font-weight-lighter text-muted copyright-text">
-				&copy; 2022 Taihua Li
+				&copy; Taihua Li
 			</div>
 		</footer>
 		<!-- copyright end -->
