--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
 					<p class="subtitle font-weight-bold">About Me</p>
 				</div>
 			</div>
-			
+
 			<div class="row fadein-order-1">
 				<div class="col-sm-4 text-center my-auto">
 					<img class="img-fluid profile-picture content-picture" src="../img/me.jpg" alt="picture of me">
@@ -62,18 +62,14 @@
 
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a Sr. Data Scientist at Amazon Web Services (AWS)
-						Professional Services, at where I advise global enterprise organizations on AI/ML strategy and roadmap. I also lead teams of scientists
-						and engineers to develop and implement AI/ML models and platforms.
-						My top three expertise in the field are as follows,
+						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a Sr. Manager at Discover Financial Services (DFS), at where I lead a team of scientists to grow the DFS credit card portfolio.
+						I also advise internal strategy, product, and engineering teams on scalable ML strategies and implementations.
+						My top 3 expertise in the field are as follows,
 					<ul>
 						<li>AI/ML and digital transformation strategy using cloud</li>
 						<li>Data science model development and operationalization</li>
 						<li>Scalable machine learning operations (MLOps) architecting</li>
 					</ul>
-					  &nbsp;&nbsp;&nbsp;&nbspAt AWS, I have helped 12 customers across financial services, media and entertainment, sports, healthcare and life sciences,
-						and agriculture, through 15 projects, to develop and productionize 6+ models and architect 2+ end-to-end ML platforms with hundreds of data scientist and
-						machine learning engineer users. The models delivered span across classical machine learning, computer vision, natural langauge processing, and signal processing.
 					</p>
 					<p>
 
