--- a/pages/cv.html
+++ b/pages/cv.html
@@ -60,6 +60,22 @@
 			<div class="row">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
+						<span class="font-weight-bold">Senior Manager</span>, Discover Financial Services (DFS), Chicago, IL
+						<ul class="text-subcontent">
+							<li> Advise and guide strategy, product, technology, and legal partners through the inception and the materialization of AI/ML solutions using hybrid cloud solutions.</li>
+						</ul>
+					</p>
+				</div>
+				<div class="col-sm-4 text-right">
+					<p class="text-content">
+						April 2023 - Current
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-8 text-left">
+					<p class="text-content">
 						<span class="font-weight-bold">Senior Data Scientist (Tech Lead)</span>, Amazon Web Services (AWS), Chicago, IL
 						<ul class="text-subcontent">
 							<li>"Alexa, what does a data scientist do?"</li>
@@ -69,7 +85,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						October 2022 - Present
+						October 2022 - April 2023
 					</p>
 				</div>
 			</div>
