--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<a href="https://www.linkedin.com/in/taihuali/" target="_blank">
 							<img src="img/icon/linkedin.png" alt="linkedin profile"/>
 						</a>
-						<a href="https://github.com/TaihuaLi" target="_blank">
+						<!-- <a href="https://github.com/TaihuaLi" target="_blank">
 							<img src="img/icon/github.png" alt="github profile"/>
-						</a>
+						</a> -->
 						<a href="https://scholar.google.com/citations?user=CuRcbboAAAAJ&hl=en" target="_blank">
 							<img src="img/icon/scholar.png" alt="Google Scholar profile"/>
 						</a>
