--- a/pages/cv.html
+++ b/pages/cv.html
@@ -52,7 +52,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="subtitle font-weight-bold">
-						Experience
+						Industry
 					</p>
 				</div>
 			</div>
@@ -62,7 +62,8 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Senior Manager</span>, Discover Financial Services (DFS), Chicago, IL
 						<ul class="text-subcontent">
-							<li> Advise and guide strategy, product, technology, and legal partners through the inception and the materialization of AI/ML solutions using hybrid cloud solutions.</li>
+							<li> <a href="https://www.discover.com/credit-cards/cash-back/cashback-calendar.html" target="_blank">5% Cashback Bonus</a> program optimization</li>
+							<li> <a href="https://www.discover.com/credit-cards/balance-transfer-credit-cards/" target="_blank">Balance Transfer</a> program optimization</li>
 						</ul>
 					</p>
 				</div>
@@ -78,30 +79,18 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Senior Data Scientist (Tech Lead)</span>, Amazon Web Services (AWS), Chicago, IL
 						<ul class="text-subcontent">
-							<li>"Alexa, what does a data scientist do?"</li>
-							<li>Check out <a href="https://aws.amazon.com/machine-learning/" target="_blank">Machine Learning on AWS</a> and <a href="https://aws.amazon.com/sagemaker/mlops/" target="_blank"> Amazon SageMaker for MLOps </a></li>
+							<li><a href="https://aws.amazon.com/sports/nhl-opportunity-analysis/" target="_blank">NHL Opportunity Analysis</a> launch</li>
+							<li><a href="https://max.com" target="_blank">HBO MAX</a> recommender system launch</li>
+							<li><a href="https://aws.amazon.com/sports/nfl/seattle-seahawks/" target="_blank">Seattle Seahawks</a> PPE detection launch</li>
+							<li><a href="https://www.mckinsey.com/about-us/overview/alliances-and-acquisitions/aws-and-mckinsey" target="_blank">McKinsey & Co.</a> Cloud MLOps launch</li>
+							<li><a href="https://www.broadridge.com/_assets/pdf/broadridge-aws-braice-case-study-ai-in-corporate-actions.pdf" target="_blank">Broadridge ICS</a> smart proxy card processing engine launch</li>
+							<li><a href="https://aws.amazon.com/blogs/machine-learning/how-ccc-intelligent-solutions-created-a-custom-approach-for-hosting-complex-ai-models-using-amazon-sagemaker/" target="_blank">CCCIS MLOps</a> enablement</li>
 						</ul>
 					</p>
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						October 2022 - April 2023
-					</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-8 text-left">
-					<p class="text-content">
-						<span class="font-weight-bold">Data Scientist</span>, Amazon Web Services (AWS), Chicago, IL
-						<ul class="text-subcontent">
-							<li>"Alexa, what does a data scientist do?"</li>
-						</ul>
-					</p>
-				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						October 2019 - October 2022
+						October 2019 - April 2023
 					</p>
 				</div>
 			</div>
@@ -111,38 +100,15 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Data Scientist II</span>, CCC Information Services, Chicago, IL
 						<ul class="text-subcontent">
-							<li>Predictive and prescriptive modeling with model deployment (Python, Java)</li>
-							<li>Customer analytics and forensic analysis</li>
-							<li>Workflow standardization and automation (Luigi, Airflow, Spark, Docker, Kafka)</li>
-							<li>Data lake architecting on Amazon Web Services (AWS)</li>
-							<li>Machine learning enablement on the cloud</li>
-							<li>Data science model research and enhancements</li>
+							<li><a href="https://www.cccis.com/insurance-carriers/claims-solutions/apd/incident-detection-and-management/predictive-method-of-inspection" target="_blank">Predictive MOI</a> launch</li>
+							<li><a href="https://www.cccis.com/insurance-carriers/claims-solutions/apd/incident-detection-and-management" target="_blank">Smart Total Loss (FNOL)</a> launch</li>
+							<li><a href="https://www.cccis.com/insurance-carriers/claims-solutions/apd/repair-management/estimating-solutions/smart" target="_blank">Smart Estimate</a> launch</li>
 						</ul>
 					</p>
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						January 2019 - October 2019
-					</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-8 text-left">
-					<p class="text-content">
-						<span class="font-weight-bold">Data Scientist I</span>, CCC Information Services, Chicago, IL
-						<ul class="text-subcontent">
-							<li>Predictive and prescriptive modeling with model deployment (Python, Java)</li>
-							<li>Customer analytics and forensic analysis</li>
-							<li>Workflow standardization and automation (Luigi, Airflow, Spark, Docker, Kafka)</li>
-							<li>Data extraction, transformation, and loading (SQL)</li>
-							<li>Image analysis, computer vision, and deep learning (OpenCV[Python], Tensorflow, Keras)</li>
-						</ul>
-					</p>
-				</div>
-				<div class="col-sm-4 text-right">
-					<p class="text-content">
-						June 2017 - January 2019
+						June 2017 - October 2019
 					</p>
 				</div>
 			</div>
@@ -152,17 +118,7 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Lead Data Science Instructor</span>, General Assembly, Chicago, IL
 						<ul class="text-subcontent">
-							<li>Lead instructor for the part-time data science program (April’19 cohort)</li>
-							<li>Taught data science topics including,
-								<ol>
-									<li>data science workflow</li>
-									<li>introduction to python programming</li>
-									<li>python programming for data science</li>
-									<li>statistics and linear algebra for machine learning</li>
-									<li>supervised and unsupervised machine learning</li>
-									<li>natural language processing</li>
-								</ol>
-							</li>
+							<li>Lead instructor for the April'19 <a href="https://generalassemb.ly/students/courses/data-science-bootcamp" target="_blank">cohort</a></li>
 						</ul>
 					</p>
 				</div>
@@ -172,15 +128,24 @@
 					</p>
 				</div>
 			</div>
+			<!-- work experience end -->
+
+			<!-- academia experience -->
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="subtitle font-weight-bold">
+						Academia
+					</p>
+				</div>
+			</div>
 
 			<div class="row">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
 						<span class="font-weight-bold">Informatics Researcher</span>, Yale University School of Medicine, New Haven, CT
 						<ul class="text-subcontent">
-							<li>Web scraping (Python) and API data collection (Twitter)</li>
-							<li>Natural language processing</li>
-							<li>Propensity modeling</li>
+							<li>Coronary microvascular dysfunction using EHR</li>
+							<li>Suicide risk detection using Twitter data</li>
 						</ul>
 					</p>
 				</div>
@@ -196,10 +161,7 @@
 					<p class="text-content">
 						<span class="font-weight-bold">Data Scientist</span>, Digital Youth Network, Chicago, IL
 						<ul class="text-subcontent">
-							<li>Customer analytics (R)</li>
-							<li>User segmentation, behavior analysis, and trajectory mapping</li>
-							<li>Customer retention/churn modeling</li>
-							<li>Multi-stakeholder recommender system (perception)</li>
+							<li>STEM interests cultivation using recommender system</li>
 						</ul>
 					</p>
 				</div>
@@ -209,27 +171,54 @@
 					</p>
 				</div>
 			</div>
-			<!-- work experience end -->
 
-			<!-- qualifications -->
+			<!-- academia experience end -->
+
+			<!-- publication -->
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="subtitle font-weight-bold">
-						Qualifications
+						Publications
 					</p>
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-sm-12 text-left">
-					<p class="text-content my-0">
-						<span class="font-weight-bold">Programming and Tools</span>: Python, Spark, SQL, Java, R, Matlab, Git, Bash, HTML, Javascript, C++<br>
-						<span class="font-weight-bold">Machine Learning</span>: Scikit-Learn, statsmodel, TensorFlow, Keras, PyTorch, AWS SageMaker, MLlib
-					</p>
-				</div>
-			</div>
-
-			<!-- qualifications end -->
+			<ul class="text-content">
+				<li>
+					Jerry Peng, Gayatri Ghanakota, <span style="color: red;">Taihua Li</span>, Dewen Qi, and Rupinder Grewal. "ew features for Amazon SageMaker Pipelines and the Amazon SageMaker SDK". AWS Machine Learning Blog, 2022. <a href="https://aws.amazon.com/blogs/machine-learning/new-features-for-amazon-sagemaker-pipelines-and-the-amazon-sagemaker-sdk/" target="_blank">blog</a>
+				</li>
+				<li>
+					Pranati Sahu, Surya Dulla, Jin Fei, Han Man, Kareem Williams, <span style="color: red;">Taihua Li</span>, and Rohit Rangnekar. "Accelerating the deployment of PPE detection solution to comply with safety guidelines". AWS Machine Learning Blog, 2021. <a href="https://aws.amazon.com/blogs/machine-learning/accelerating-the-deployment-of-ppe-detection-solution-to-comply-with-safety-guidelines/" target="_blank">blog</a>
+				</li>
+				<li>
+					<span style="color: red;">Taihua Li</span>. "Building a customized recommender system in Amazon SageMaker." AWS Machine Learning Blog, 2020. <a href="https://aws.amazon.com/blogs/machine-learning/building-a-customized-recommender-system-in-amazon-sagemaker/" target="_blank">blog</a>
+				</li>
+				<li>
+					Samah Fodeh, <span style="color: red;">Taihua Li</span>, Kevin Menczynski, Tedd Burgette, Andrew Harris, Georgeta Ilita, Satyan Rao, Jonathan Gemmell, Daniela Raicu. "Using Machine Learning Algorithms to Detect Suicide Risk Factors on Twitter." In 2019 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 941-948. IEEE, 2019.
+					<a href="https://ieeexplore.ieee.org/abstract/document/8955490" target="_blank">pdf</a>
+				</li>
+				<li>
+					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics, 2019.
+					<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>
+				</li>
+				<li>
+					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Identifying Patients with Coronary Microvascular Dysfunction using Machine Learning." In 2018 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 715-721. IEEE, 2018.
+					<a href="https://ieeexplore.ieee.org/abstract/document/8637572" target="_blank">pdf</a>
+				</li>
+				<li>
+					Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences, 2017.
+					<a href="https://repository.isls.org/handle/1/246" target="_blank">pdf</a>
+				</li>
+				<li>
+					Nacu, Denise C., Caitlin K. Martin, Nichole Pinkard, Taha Hamid, <span style="color: red;">Taihua Li</span>, Daniela Stan Raicu, and Jonathan Gemmell. "Helping educators leverage youth interest in STEM out-of-school programs." In 2016 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT), pp. 1-1. IEEE, 2016.
+					<a href="https://ieeexplore.ieee.org/abstract/document/7836178" target="_blank">pdf</a>
+				</li>
+				<li>
+					Hamid, Taha, Denise C. Nacu, <span style="color: red;">Taihua Li</span>, Jonathan Gemmell, Daniela Stan Raicu, Caitlin K. Martin, Michael Schutzenhofer, and Nichole Pinkard. "Recommender system to support brokering of youth learning opportunities." In 2016 IEEE/WIC/ACM International Conference on Web Intelligence Workshops (WIW), pp. 64-65. IEEE, 2016.
+					<a href="https://ieeexplore.ieee.org/document/7814479" target="_blank">pdf</a>
+				</li>
+			</ul>
+			<!-- publication end -->
 
 			<!-- education -->
 			<div class="row">
@@ -282,52 +271,6 @@
 				</div>
 			</div>
 			<!-- education end-->
-
-			<!-- publication -->
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="subtitle font-weight-bold">
-						Publications
-					</p>
-				</div>
-			</div>
-
-			<ul class="text-content">
-				<li>
-					Jerry Peng, Gayatri Ghanakota, <span style="color: red;">Taihua Li</span>, Dewen Qi, and Rupinder Grewal. "ew features for Amazon SageMaker Pipelines and the Amazon SageMaker SDK". AWS Machine Learning Blog, 2022. <a href="https://aws.amazon.com/blogs/machine-learning/new-features-for-amazon-sagemaker-pipelines-and-the-amazon-sagemaker-sdk/" target="_blank">blog</a>
-				</li>
-				<li>
-					Pranati Sahu, Surya Dulla, Jin Fei, Han Man, Kareem Williams, <span style="color: red;">Taihua Li</span>, and Rohit Rangnekar. "Accelerating the deployment of PPE detection solution to comply with safety guidelines". AWS Machine Learning Blog, 2021. <a href="https://aws.amazon.com/blogs/machine-learning/accelerating-the-deployment-of-ppe-detection-solution-to-comply-with-safety-guidelines/" target="_blank">blog</a>
-				</li>
-				<li>
-					<span style="color: red;">Taihua Li</span>. "Building a customized recommender system in Amazon SageMaker." AWS Machine Learning Blog, 2020. <a href="https://aws.amazon.com/blogs/machine-learning/building-a-customized-recommender-system-in-amazon-sagemaker/" target="_blank">blog</a>
-				</li>
-				<li>
-					Samah Fodeh, <span style="color: red;">Taihua Li</span>, Kevin Menczynski, Tedd Burgette, Andrew Harris, Georgeta Ilita, Satyan Rao, Jonathan Gemmell, Daniela Raicu. "Using Machine Learning Algorithms to Detect Suicide Risk Factors on Twitter." In 2019 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 941-948. IEEE, 2019.
-					<a href="https://ieeexplore.ieee.org/abstract/document/8955490" target="_blank">pdf</a>
-				</li>
-				<li>
-					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Classification of Patients with Coronary Microvascular Dysfunction." IEEE/ACM transactions on computational biology and bioinformatics, 2019.
-					<a href="https://ieeexplore.ieee.org/document/8704869" target="_blank">pdf</a>
-				</li>
-				<li>
-					Fodeh, Samah, <span style="color: red;">Taihua Li</span>, Haya Jarad, and Basmah Safdar. "Identifying Patients with Coronary Microvascular Dysfunction using Machine Learning." In 2018 IEEE International Conference on Data Mining Workshops (ICDMW), pp. 715-721. IEEE, 2018.
-					<a href="https://ieeexplore.ieee.org/abstract/document/8637572" target="_blank">pdf</a>
-				</li>
-				<li>
-					Bishara, Sarah, Jennifer Baltes, Taha Hamid, <span style="color: red;">Taihua Li</span>, Denise C. Nacu, Caitlin K Martin, Jonathan Gemmell, Chris MacArthur, Daniela Raicu, and Nichole Pinkard. "Revealing Interaction Patterns Among Youth in an Online Social Learning Network Using Markov Chain Principles." Philadelphia, PA: International Society of the Learning Sciences, 2017.
-					<a href="https://repository.isls.org/handle/1/246" target="_blank">pdf</a>
-				</li>
-				<li>
-					Nacu, Denise C., Caitlin K. Martin, Nichole Pinkard, Taha Hamid, <span style="color: red;">Taihua Li</span>, Daniela Stan Raicu, and Jonathan Gemmell. "Helping educators leverage youth interest in STEM out-of-school programs." In 2016 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT), pp. 1-1. IEEE, 2016.
-					<a href="https://ieeexplore.ieee.org/abstract/document/7836178" target="_blank">pdf</a>
-				</li>
-				<li>
-					Hamid, Taha, Denise C. Nacu, <span style="color: red;">Taihua Li</span>, Jonathan Gemmell, Daniela Stan Raicu, Caitlin K. Martin, Michael Schutzenhofer, and Nichole Pinkard. "Recommender system to support brokering of youth learning opportunities." In 2016 IEEE/WIC/ACM International Conference on Web Intelligence Workshops (WIW), pp. 64-65. IEEE, 2016.
-					<a href="https://ieeexplore.ieee.org/document/7814479" target="_blank">pdf</a>
-				</li>
-			</ul>
-			<!-- publication end -->
 
 		</div>
 
