--- a/pages/about.html
+++ b/pages/about.html
@@ -67,7 +67,7 @@
 						My top 3 expertise in the field are as follows,
 					<ul>
 						<li>AI/ML and digital transformation strategy using cloud</li>
-						<li>Data science model development and operationalization</li>
+						<li>Data science model development and operation</li>
 						<li>Scalable machine learning operations (MLOps) architecting</li>
 					</ul>
 					</p>
