--- a/pages/about.html
+++ b/pages/about.html
@@ -62,11 +62,11 @@
 
 				<div class="col-sm-8 text-left text-content my-auto">
 					<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am a Sr. Manager at Discover Financial Services (DFS), at where I lead a team of scientists to grow the DFS credit card portfolio.
-						I also advise internal strategy, product, and engineering teams on scalable ML strategies and implementations.
+						&nbsp;&nbsp;&nbsp;&nbsp;My name is Taihua Li (Ty-hu-ah Lee), and I go by Ray. I am the AI/ML Solution Director at Turnberry Solutions. At Turnberry, I advise clients on AI/ML and data strategies and lead teams of scientists and engineers to deliver value-driven AI/ML solutions and data infrastructure.
+
 						My top 3 expertise in the field are as follows,
 					<ul>
-						<li>AI/ML and digital transformation strategy using cloud</li>
+						<li>Data, AI/ML, and digital transformation strategy using cloud</li>
 						<li>Data science model development and operation</li>
 						<li>Scalable machine learning operations (MLOps) architecting</li>
 					</ul>
