--- a/pages/cv.html
+++ b/pages/cv.html
@@ -60,6 +60,25 @@
 			<div class="row">
 				<div class="col-sm-8 text-left">
 					<p class="text-content">
+						<span class="font-weight-bold">Solution Director, AI/ML</span>, Turnberry Solutions, Chicago, IL
+						<ul class="text-subcontent">
+							<li>Launched and grew the AI consulting practice, delivering solutions in LLM, forecasting, recommender system, and computer vision, across healthcare, retail, and media and entertainment verticals.</li>
+							<li>Advised 13 customers on data and AI readiness and adoption strategies to design short-term and long-term roadmaps.</li>
+							<li>Launched an o1-based lead generation app for 60+ sales managers to receive client engagement talking points weekly.</li>
+							<li>Piloted a Llama-based resume screening app for 80+ recruiters.</li>
+						</ul>
+					</p>
+				</div>
+				<div class="col-sm-4 text-right">
+					<p class="text-content">
+						September 2024 - Current
+					</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-8 text-left">
+					<p class="text-content">
 						<span class="font-weight-bold">Senior Manager</span>, Discover Financial Services (DFS), Chicago, IL
 						<ul class="text-subcontent">
 							<li> <a href="https://www.discover.com/credit-cards/cash-back/cashback-calendar.html" target="_blank">5% Cashback Bonus</a> program optimization</li>
@@ -69,7 +88,7 @@
 				</div>
 				<div class="col-sm-4 text-right">
 					<p class="text-content">
-						April 2023 - Current
+						April 2023 - September 2024
 					</p>
 				</div>
 			</div>
